--- a/Talents/appsettings.json
+++ b/Talents/appsettings.json
@@ -9,7 +9,7 @@
   },
   "Data": {
     "DefaultConnection": {
-      "ConnectionString": "Server=(LocalDB)\\MSSQLLocalDB;Database=EasyTalents;Trusted_Connection=True;"
+      "ConnectionString": "Server=(LocalDB)\\MSSQLLocalDB;Database=Robo;Trusted_Connection=True;"
     }
   }
 }
