--- a/Talents/Properties/launchSettings.json
+++ b/Talents/Properties/launchSettings.json
@@ -15,7 +15,7 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
-    "Talents": {
+    "Robo": {
       "commandName": "Project",
       "launchBrowser": true,
       "environmentVariables": {
